--- a/portfolio/src/styles/_contact.scss
+++ b/portfolio/src/styles/_contact.scss
@@ -6,11 +6,11 @@
     border-radius: 0.5rem;
     border: 2px solid black;
     position: absolute;
-    top: 0; 
+    top: 1rem; 
     left: 0;
     right: 0;
     z-index: 10;
-    height: 60vh;
+    height: 45vh;
     width: 90vw;
     overflow: auto;
     margin: 0 auto;
@@ -83,7 +83,7 @@
         margin: 0rem 1.5rem;
     }
 
-    .contact-blurb, .other-info {
+    .contact-blurb {
         margin-top: 1rem;
     }
 
@@ -109,7 +109,7 @@
     
     .links {
         text-align: center;  
-        margin-top: 1rem;  
+        margin-top: 2rem;  
         display: flex;
         justify-content: center;
 
@@ -122,5 +122,81 @@
     
     a {
         color: black;
+    }
+
+    // 600px
+    @media (min-width: 37.5em) {
+        top: 3rem;
+        width: 75vw;
+        height: 40vh;
+
+        .close-button {
+            right: 0.25rem;
+            top: 0.2rem;
+    
+            svg {
+                width: 1.75rem;
+                height: 1.75rem;
+            }
+        }
+
+        .contact-tab {
+            font-size: 1rem;
+        }
+
+        .contact-heading h1 {
+            font-size: 1.8rem;
+        }
+    }
+
+    // 768px
+    @media (min-width: 48em) {
+        width: 65vw;
+        top: 4rem;
+    }
+
+    // 900px
+    @media (min-width: 56.25em) {
+        width: 60vw;
+        top: 5rem;
+
+        .contact-blurb {
+            margin: 1rem 2rem;
+        }
+    }
+
+    // 1024px 
+    @media (min-width: 64em) {
+        left: unset;
+        right: 15.45rem;
+        width: 50vw;
+        top: 6rem;
+    }
+
+    // 1220px
+    @media (min-width: 76.25em) {
+        right: 20rem;
+        width: 45vw;
+    }
+
+    // 1440px
+    @media (min-width: 90em) {
+        width: 39vw;
+        right: 27rem;
+        top: 7rem;
+    }
+
+    // 1750px
+    @media (min-width: 109.37em) {
+        width: 30vw;
+        right: 38rem;
+        top: 10rem;
+    }
+
+    // 1920px 
+    @media (min-width: 120em) {
+        top: 10rem;
+        right: 40rem;
+        width: 31vw;
     }
 }
