--- a/portfolio/src/styles/_singleWork.scss
+++ b/portfolio/src/styles/_singleWork.scss
@@ -7,7 +7,7 @@
     border: 2px solid black;
     position: absolute;
     top: 1.5rem;
-    left: 0.6rem;
+    left: 0.4rem;
     z-index: 100;
     height: 85vh;
     width: 90vw;
@@ -114,7 +114,7 @@
             max-width: 95%;
             margin: 0 auto;
             display: flex;
-            margin-top: 1rem 
+            margin-top: 1rem;
         }
     }
 
@@ -274,6 +274,35 @@
 
     // 1440px 
     @media (min-width: 90em) {
+        right: 10rem;
+    }
+
+    // 1750px
+    @media (min-width: 109.37em) {
+        right: 13rem;
         
+        .work-summary {
+            margin: 2.5rem 5rem;
+        }
+
+        .work-details {
+            margin: 1rem 5rem;
+        }
+
+        .show-tab img {
+            max-width: 85%;
+        }
+
+        .process {
+            h3, a, p {
+             margin: 1rem 2.5rem;
+            }
+         }
+    }
+
+    // 1920px
+    @media (min-width: 120em) {
+        width: 70vw;
+        right: 17rem;
     }
 }
