files responsive again, paint/toggle dark mode

--- a/portfolio/src/styles/_contact.scss
+++ b/portfolio/src/styles/_contact.scss
@@ -6,11 +6,11 @@
     border-radius: 0.5rem;
     border: 2px solid black;
     position: absolute;
-    top: 1rem; 
+    top: 5rem; 
     left: 0;
     right: 0;
     z-index: 10;
-    height: 45vh;
+    height: 25rem;
     width: 90vw;
     overflow: auto;
     margin: 0 auto;
@@ -126,9 +126,9 @@
 
     // 600px
     @media (min-width: 37.5em) {
-        top: 3rem;
+        top: 8rem;
         width: 75vw;
-        height: 40vh;
+        height: 22rem;
 
         .close-button {
             right: 0.25rem;
@@ -152,13 +152,12 @@
     // 768px
     @media (min-width: 48em) {
         width: 65vw;
-        top: 4rem;
     }
 
     // 900px
     @media (min-width: 56.25em) {
-        width: 60vw;
-        top: 5rem;
+        width: 58vw;
+        top: 10rem;
 
         .contact-blurb {
             margin: 1rem 2rem;
@@ -168,9 +167,8 @@
     // 1024px 
     @media (min-width: 64em) {
         left: unset;
-        right: 15.45rem;
+        right: 15.5rem;
         width: 50vw;
-        top: 6rem;
     }
 
     // 1220px
@@ -183,19 +181,16 @@
     @media (min-width: 90em) {
         width: 39vw;
         right: 27rem;
-        top: 7rem;
     }
 
     // 1750px
     @media (min-width: 109.37em) {
         width: 30vw;
         right: 38rem;
-        top: 10rem;
     }
 
     // 1920px 
     @media (min-width: 120em) {
-        top: 10rem;
         right: 40rem;
         width: 31vw;
     }
