--- a/portfolio/src/styles/_variables.scss
+++ b/portfolio/src/styles/_variables.scss
@@ -9,8 +9,8 @@ $background-color: #EAEFFB;
 $light-purple: #c8cbfd;
 $light-blue: #ACC3F2;
 $pink: #fbd1d1;
-$orb-color: #3b43b9;
-$orb-color-2: #66388cd2;
+$orb-color: rgba(87, 93, 183, 0.784);
+$orb-color-2: #f99cb3d8;
 
 // Break Points
 $mobile: 20.625em; // 330px
