--- a/portfolio/src/styles/_about.scss
+++ b/portfolio/src/styles/_about.scss
@@ -6,11 +6,11 @@
     border-radius: 0.5rem;
     border: 2px solid black;
     position: absolute;
-    top: 1rem; 
+    top: 4.5rem; 
     left: 0;
     right: 0;
     z-index: 10;
-    height: 85vh;
+    height: 35rem;
     width: 90vw;
     overflow: auto;
     text-align: left;
@@ -184,8 +184,7 @@
     // 600px
     @media (min-width: 37.5em){
         width: 80vw;
-        height: 85vh;
-        top: 2rem;
+        top: 5rem;
 
         .about-heading h1 {
             font-size: 1.8rem;
@@ -231,8 +230,8 @@
 
     // 768px tablet
     @media (min-width: 48em) {
-        height: 75vh;
         width: 70vw;
+        top: 6rem;
 
         .about-blurbs {
             font-size: 1rem;
@@ -275,14 +274,14 @@
     // 965px
     @media (min-width: 60.31em) {
         width: 55vw;
-        top: 3rem;
+        top: 7rem;
     }
 
     // 1024px laptop
     @media (min-width: 64em) {
         left: unset;
-        right: 13rem;
-        top: 0;
+        right: 15rem;
+        top: 7.5rem;
 
         .close-button {
             top: 0.25rem;
@@ -304,7 +303,7 @@
     @media (min-width: 90em) {
         right: 20rem;
         width: 53vw;
-        top: 1.5rem;
+        top: 8.5rem;
     }
 
     // 1920px
