--- a/portfolio/src/styles/_header.scss
+++ b/portfolio/src/styles/_header.scss
@@ -7,6 +7,15 @@
     justify-content: space-between;
     align-items: center;
     
+    .dark-mode-dot {
+        position: absolute;
+        top: 3.5rem;
+        z-index: 10;
+        left: 4.5rem;
+        fill: $text-color;
+        width: 1.5rem;
+    }
+
     .header-icons {
         display: flex;
         fill: $text-color;
@@ -43,6 +52,18 @@
         margin-left: 0.5rem;
     }
 
+    svg.paint-palette, svg.paint-palette-2  {
+        animation: MoveUpDown 0.6s linear infinite;
+    }
+
+    @keyframes MoveUpDown {
+        0%, 100% {
+          transform: translateY(0);
+        }
+        50% {
+          transform: translateY(-3px);
+        }
+      }
 }
 
 // 768px tablet
