--- a/portfolio/src/styles/_home.scss
+++ b/portfolio/src/styles/_home.scss
@@ -31,18 +31,19 @@
     }
 
     &::before {
-        background: radial-gradient(circle, $orb-color 10%, transparent 60%);
+        background: radial-gradient(circle, $orb-color 5%, transparent 70%);
         background-size: 40px 40px; /* Adjust size of orbs */
         background-position: right bottom; /* Start orbs from the bottom */
         animation: float 55s infinite alternate; /* Adjust animation duration */
     }
 
     &::after {
-        background: radial-gradient(circle, $orb-color-2 10%, transparent 70%);
+        background: radial-gradient(circle, $orb-color-2 5%, transparent 80%);
         background-size: 30px 30px; /* Adjust size of orbs */
         background-position: left bottom; /* Start orbs from the bottom */
         animation: float 45s infinite alternate; /* Adjust animation duration */
     }
+
     .intro {
         text-align: center;
 
@@ -60,9 +61,12 @@
         }
     }
 
-    
     .nav-folders {
         text-align: center;
+
+        .cls-1, .cls-2 {
+            fill: $light-blue;
+        }
 
         .folder-button {
             max-width: 100%;
@@ -73,8 +77,6 @@
                 height: auto;
             }
         }
-
-
         
         p{
             color: $text-color;
@@ -83,6 +85,7 @@
         
         button:active, button:focus { 
             border: none;
+            outline: none;
         }
     }
     
