--- a/portfolio/src/styles/_singleWork.scss
+++ b/portfolio/src/styles/_singleWork.scss
@@ -6,10 +6,10 @@
     border-radius: 0.5rem;
     border: 2px solid black;
     position: absolute;
-    top: 1.5rem;
+    top: 6rem;
     left: 0.4rem;
     z-index: 100;
-    height: 85vh;
+    height: 35rem;
     width: 90vw;
     overflow: auto; 
     margin: 0 1rem;
@@ -149,19 +149,16 @@
     @media (min-width: 23.87em) {
         left: 1rem;
         width: 87vw;
-        height: 86vh;
     }
 
     // 425px mobile large
     @media (min-width: 26.56em) {
-        height: 85vh;
         width: 85vw;
     }
 
     // 600px
     @media (min-width: 37.5em){
         left: 1.75rem;
-        height: 82vh;
 
         .tab-nav {
             li {
@@ -218,8 +215,6 @@
      @media (min-width: 48em) {
         left: 4.5rem;
         width: 75vw;
-        height: 80vh;
-        top: 2rem;
 
         .work-summary, .work-details{
             margin: 1rem 1.5rem;
@@ -265,7 +260,7 @@
     // 1024px
     @media (min-width: 64em) {
         left: unset;
-        top: 0rem;
+        top: 7rem;
 
         .work-summary {
             margin: 2.5rem 3rem;
