hover fx, loading fix, header fix, splash change

--- a/portfolio/src/styles/_about.scss
+++ b/portfolio/src/styles/_about.scss
@@ -4,7 +4,7 @@
     background-color: $background-color;
     color: $text-color;
     border-radius: 0.5rem;
-    border: 2px solid black;
+    border: 2px solid $text-color;
     position: absolute;
     top: 4.5rem; 
     left: 0;
@@ -32,16 +32,16 @@
         margin-bottom: 0;
         font-size: 14px;
 
-        li.active {
+        li.active, li:hover, li:active, li:focus {
             background-color: $pink;
             font-weight: bold;
         }
     }
 
     .stack-heading {
-        border-right: 1.5px black solid;
-        border-left: 1.5px black solid;
-        border-top: 1.5px black solid;
+        border-right: 1.5px $text-color solid;
+        border-left: 1.5px $text-color solid;
+        border-top: 1.5px $text-color solid;
         border-top-right-radius: 1rem;
         border-top-left-radius: 1rem;
         margin-bottom: 0;
@@ -49,9 +49,9 @@
     }
 
     .faq-heading {
-        border-right: 1.5px black solid;
-        border-left: 1.5px black solid;
-        border-top: 1.5px black solid;
+        border-right: 1.5px $text-color solid;
+        border-left: 1.5px $text-color solid;
+        border-top: 1.5px $text-color solid;
         border-top-right-radius: 1rem;
         border-top-left-radius: 1rem;
         margin-bottom: 0;
@@ -59,9 +59,9 @@
     }
 
     .background-heading {
-        border-right: 1.5px black solid;
-        border-left: 1.5px black solid;
-        border-top: 1.5px black solid;
+        border-right: 1.5px $text-color solid;
+        border-left: 1.5px $text-color solid;
+        border-top: 1.5px $text-color solid;
         border-top-right-radius: 1rem;
         border-top-left-radius: 1rem;
         margin-bottom: 0;
@@ -78,15 +78,15 @@
     .about-heading-container {
         background-color: $background-color;
         padding: 0.3rem;
-        border-top: 1.5px solid black;
-        border-bottom: 1.5px solid black;
+        border-top: 1.5px solid $text-color;
+        border-bottom: 1.5px solid $text-color;
     }
 
     .about-heading {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border: 1.5px solid black;
+        border: 1.5px solid $text-color;
         margin: 0 0.5rem;
         border-radius: 0.5rem;
 
@@ -244,6 +244,7 @@
             svg {
                 width: 1.75rem;
                 height: 1.75rem;
+                fill: $text-color;
             }
         }
 
