--- a/portfolio/src/styles/_variables.scss
+++ b/portfolio/src/styles/_variables.scss
@@ -20,8 +20,18 @@ $db-secondary: #6b7ed8; /* or #DDD7F4 */
 $db-tertiary: #597bc5;
 $db-accent: #EFEFF3;
 
-$db-orb-color: #a770b980;
-$db-orb-color-2: #6b7dd87a;
+$db-orb-color: #6e477b58;
+$db-orb-color-2: #3f4d8f60;
+
+// green
+$g-text-color: #2C3F06;
+$g-background-color: #f3f1ee;
+$g-primary: #9EA97A;
+$g-secondary: #CDD8A5;
+$g-accent: #EEECE1;
+
+$g-orb-color: #ffff0043;
+$g-orb-color-2: #9ea97a5c;
 
 // Break Points
 $mobile: 20.625em; // 330px
