--- a/portfolio/src/styles/_contact.scss
+++ b/portfolio/src/styles/_contact.scss
@@ -4,7 +4,7 @@
     background-color: $background-color;
     color: $text-color;
     border-radius: 0.5rem;
-    border: 2px solid black;
+    border: 2px solid $text-color;
     position: absolute;
     top: 5rem; 
     left: 0;
@@ -35,14 +35,14 @@
     .contact-heading-container {
         background-color: $background-color;
         padding: 0.3rem;
-        border-top: 1.5px solid black;
-        border-bottom: 1.5px solid black;
+        border-top: 1.5px solid $text-color;
+        border-bottom: 1.5px solid $text-color;
     }
 
     .contact-tab {
-        border-right: 1.5px black solid;
-        border-left: 1.5px black solid;
-        border-top: 1.5px black solid;
+        border-right: 1.5px $text-color solid;
+        border-left: 1.5px $text-color solid;
+        border-top: 1.5px $text-color solid;
         border-top-right-radius: 1rem;
         border-top-left-radius: 1rem;
         margin-bottom: 0;
@@ -55,7 +55,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border: 1.5px solid black;
+        border: 1.5px solid $text-color;
         margin: 0 0.5rem;
         border-radius: 0.5rem;
 
@@ -92,18 +92,24 @@
         margin-top: 1rem;
 
         .email {
-            border: 1.5px black solid;
+            border: 1.5px $text-color solid;
             background-color: white;
             padding: 0.2rem;
             border-radius: 0.25rem;
             color: $text-color;
-
         }
 
         button {
             padding: 0.25rem;
             background-color: $light-blue;
             margin-left: 0.25rem;
+        }
+    }
+
+    .copy-button:hover, .copy-button:active, .copy-button:focus{
+        button {
+            background-color: $text-color;
+            color: $light-blue;
         }
     }
     
@@ -121,7 +127,13 @@
     }
     
     a {
-        color: black;
+        color: $text-color;
+    }
+    
+    a:hover, a:focus, a:active{
+        svg {
+            fill: $light-blue;
+        }
     }
 
     // 600px
@@ -137,6 +149,7 @@
             svg {
                 width: 1.75rem;
                 height: 1.75rem;
+                fill: $text-color;
             }
         }
 
