--- a/portfolio/src/styles/_singleWork.scss
+++ b/portfolio/src/styles/_singleWork.scss
@@ -24,7 +24,7 @@
         margin-bottom: 0;
         font-size: 14px;
 
-         li.active {
+         li.active, li:hover, li:active, li:focus {
             background-color: $pink;
             font-weight: bold;
          }
@@ -134,6 +134,11 @@
             padding: 0.5rem;
             border-radius: 0.5rem;
             margin: 0.2rem;
+        }
+
+        a:active, a:hover, a:focus {
+            background-color: $text-color;
+            color: $light-purple;
         }
     }
 
