--- a/portfolio/src/styles/_splash.scss
+++ b/portfolio/src/styles/_splash.scss
@@ -7,7 +7,7 @@ body {
 
 .splash-content {
     position: absolute;
-    top: 25rem;
+    top: 23rem;
     text-align: center;
     right: 0;
     left: 0;
@@ -17,19 +17,54 @@ body {
     text-align: center;
     position: relative;
     h1 {
-        font-weight: 400;
+        font-weight: 500;
         margin: 0 2rem;
+        font-size: 3rem;
+    }
+
+    .username, .password {
+        border: 1px solid black;
+        border-radius: 1rem;
+        width: 10rem;
+        text-align: center;
+        margin: 1rem auto;
+        padding: 0.2rem;
+
+        .dots {
+            margin-left: 2rem;
+        }
+
+        .dot {
+            width: 0.5rem;
+            height: 0.5rem;
+            display: inline-block;
+            background-color: black;
+            border-radius: 50%;
+            margin: 0.1rem;
+        }
+    }
+
+    .password {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+        .arrow-button {
+            width: 20px;
+            height: 20px;
+            fill: #88a8e8;
+            margin-left: 0.75rem;
+        }
+
+        .arrow-button:hover, .arrow-button:focus, .arrow-button:active {
+            fill: #5d89e2;
+        }
     }
 
     img {
         width: 20rem;
         height: auto;
-    }
-
-    button {
-        background-color: $light-blue;
-        padding: 0.75rem;
-        border-radius: 1rem;
+    
     }
 }
 
@@ -90,9 +125,27 @@ body {
             margin: 0.75rem;
         }
         
-        button {
-            font-size: 1.3rem;
-            padding: 0.75rem;
+        .username, .password {
+            width: 13rem;
+            border-radius: 10rem;
+
+            .dot {
+                width: 0.75rem;
+                height: 0.75rem;
+            }
+        }
+
+        
+        .password {
+            padding: 0.4rem 0.2rem;
+            .dots {
+                margin-left: 1.5rem;
+            }
+            .arrow-button {
+                width: 30px;
+                height: 30px;
+                margin: 0;
+            }
         }
         
         img {
