--- a/portfolio/src/styles/_variables.scss
+++ b/portfolio/src/styles/_variables.scss
@@ -30,8 +30,38 @@ $g-primary: #9EA97A;
 $g-secondary: #CDD8A5;
 $g-accent: #EEECE1;
 
-$g-orb-color: #ffff0043;
-$g-orb-color-2: #9ea97a5c;
+$g-orb-color: #e1fd4043;
+$g-orb-color-2: #a6b76f5c;
+
+// yellow
+$y-text-color: #813100;
+$y-background-color: #FAF7F4;
+$y-primary: #f8d86f;
+$y-secondary: #F6C184;
+$y-accent: #F5C8CE;
+
+$y-orb-color: #ffa20043;
+$y-orb-color-2: #ffd90045;
+
+// pink
+$p-text-color: #3D1444;
+$p-background-color: #FDF2F6;
+$p-primary:#F5C2D7;
+$p-secondary: #F5A3C4;
+$p-accent: #E6D1F5;
+
+$p-orb-color: #f27cff2c;
+$p-orb-color-2: #f3cdff26;
+
+// medium blue
+$b-text-color: #101835;
+$b-background-color: #F5F5F5;
+$b-primary: #196CCE;
+$b-secondary: #6B90C9;
+$b-accent: #C9DBF5;
+
+$b-orb-color: #9eb8ff43;
+$b-orb-color-2: #d3e6ff45;
 
 // Break Points
 $mobile: 20.625em; // 330px
