--- a/portfolio/src/styles/style.scss
+++ b/portfolio/src/styles/style.scss
@@ -4,6 +4,9 @@
 // color themes
 @use './themes/darkBlue';
 @use './themes/green';
+@use './themes/yellow';
+@use './themes/pink';
+@use './themes/blue';
 
 // header
 @use 'header';
