--- a/portfolio/src/styles/_loading.scss
+++ b/portfolio/src/styles/_loading.scss
@@ -1,8 +1,66 @@
+@use 'variables' as *;
+
+.loading-container {
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+}
+
 .loading {
     position: absolute;
     left: 0;
     right: 0;
     margin: 0 auto;
     height: auto;
-    top: 40vh;
+    top: 25vh;
 }
+
+  .container {
+    display: flex;
+    max-width: max-content;
+    flex-direction: column;
+    margin: auto;
+  }
+
+  .loader {
+    width: 130px;
+    height: 80px;
+    margin: 0 auto;
+    display: flex;
+    position: absolute;
+    top: 57vh;
+    right: 0;
+    left: 0;
+  }
+
+  .circle {
+    width: 20px;
+    height: 20px;
+    background: black;
+    border-radius: 50%;
+    margin: 0 auto;
+  }
+
+  .circle {
+    animation: jump 1s linear infinite
+    }
+
+    @keyframes jump {
+    0% {
+        margin-top: 0;
+    }
+    35% {
+        margin-top: -35px;
+    }
+    70% {
+        margin-top: 0px;
+    }
+    }
+
+
+    #b {
+    animation-delay: 0.2s;
+    }
+    #c {
+    animation-delay: 0.4s;
+    }
