--- a/portfolio/src/styles/_themeToggle.scss
+++ b/portfolio/src/styles/_themeToggle.scss
@@ -1,6 +1,21 @@
 @use 'variables' as *;
 
 .header-content {
+    
+    .light-blue-dot {
+        position: absolute;
+        top: 3.75rem; /* + 1.75rem */
+        z-index: 100;
+        left: 0.5rem;
+        fill: $light-blue;
+        width: 1.5rem;
+        
+        circle {
+            stroke: #708dc894;
+            stroke-width: 0.15rem;
+        }
+    }
+
     .dark-blue-dot {
         position: absolute;
         top: 5.5rem;
@@ -10,21 +25,7 @@
         width: 1.5rem;
 
         circle {
-            stroke: #253d8e92;
-            stroke-width: 0.15rem;
-        }
-    }
-
-    .light-blue-dot {
-        position: absolute;
-        top: 3.75rem;
-        z-index: 100;
-        left: 0.5rem;
-        fill: $light-blue;
-        width: 1.5rem;
-
-        circle {
-            stroke: #708dc894;
+            stroke: #9bb2ff85;
             stroke-width: 0.15rem;
         }
     }
@@ -43,10 +44,52 @@
         }
     }
 
+    .yellow-dot {
+        position: absolute;
+        top: 9rem;
+        z-index: 100;
+        left: 0.5rem;
+        fill: $y-primary;
+        width: 1.5rem;
+
+        circle {
+            stroke: #d9cd2a97;
+            stroke-width: 0.15rem;
+        }
+    }
+
+    .pink-dot {
+        position: absolute;
+        top: 10.75rem;
+        z-index: 100;
+        left: 0.5rem;
+        fill: $p-primary;
+        width: 1.5rem;
+
+        circle {
+            stroke: #f79aff97;
+            stroke-width: 0.15rem;
+        }
+    }
+
+    .blue-dot {
+        position: absolute;
+        top: 12.5rem;
+        z-index: 100;
+        left: 0.5rem;
+        fill: $b-primary;
+        width: 1.5rem;
+
+        circle {
+            stroke: #2a4ad997;
+            stroke-width: 0.15rem;
+        }
+    }
+
     // 768px
     @media (min-width:48em) {
         .light-blue-dot {
-            top: 4.75rem;
+            top: 4.75rem; /* + 1.75rem */
         }
 
         .dark-blue-dot {
@@ -55,6 +98,18 @@
 
         .green-dot {
             top: 8.25rem;
+        }
+
+        .yellow-dot {
+            top: 10rem;
+        }
+
+        .pink-dot {
+            top: 11.75rem;
+        }
+
+        .blue-dot {
+            top: 13.5rem;
         }
     }
 }
