--- a/portfolio/src/styles/_loading.scss
+++ b/portfolio/src/styles/_loading.scss
@@ -3,7 +3,7 @@
 .loading-container {
     width: 100%;
     height: 100vh;
-    background-color: black;
+    background-color: white;
 }
 
 .loading {
@@ -12,7 +12,7 @@
     right: 0;
     margin: 0 auto;
     height: auto;
-    top: 25vh;
+    top: 24vh;
 }
 
   .container {
@@ -28,7 +28,7 @@
     margin: 0 auto;
     display: flex;
     position: absolute;
-    top: 57vh;
+    top: 61vh;
     right: 0;
     left: 0;
   }
@@ -36,7 +36,7 @@
   .circle {
     width: 20px;
     height: 20px;
-    background: black;
+    background: $light-blue;
     border-radius: 50%;
     margin: 0 auto;
   }
@@ -56,7 +56,6 @@
         margin-top: 0px;
     }
     }
-
 
     #b {
     animation-delay: 0.2s;
